@@ -83,6 +83,10 @@ Version 1.7.7
 - BUG: Issue #276: exception if more than 192 user
        defined properties are found. (Stefan)
 - BUG: Issue #278: Scrolling in IDiff. (Stefan)
+- BUG: Issue #279: applying patch with property
+       changes shows error. (Stefan)
+- BUG: Issue #280: saving patch to clipboard
+       fails to open patch viewer. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
